Fixed breedname answer alignment

--- a/src/components/GamePage/GamePage.css
+++ b/src/components/GamePage/GamePage.css
@@ -43,6 +43,15 @@
   align-items: stretch;
 }
 
+.answerBreedname {
+  padding: 15px;
+  margin: 15px;
+  font-size: 1.35rem;
+  font-weight: bold;
+  color: #e6e9f0;
+  width: 200px;
+}
+
 .answer {
   padding: 15px;
   margin: 15px;
@@ -56,11 +65,6 @@
 
 .answerpicture {
   max-width: 100%;
-}
-
-.answerWaiting {
-  border: 3px solid #431c5d;
-  background-color: #431c5d;
 }
 
 .answerWaiting {
@@ -113,5 +117,4 @@ img {
     flex-flow: column nowrap;
     align-items: center;
   }
-
 }
